--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "64robots/nova-fields": "^0.18.0",
         "ampeco/nova-date-range-filter": "^0.1.1",
         "bakerkretzmar/nova-settings-tool": "^1.0",
+        "benjaminhirsch/nova-slug-field": "^1.2",
         "bissolli/nova-phone-field": "^0.0.4",
         "chris-ware/nova-breadcrumbs": "^2.1",
         "custom-component/access-control": "*",
@@ -26,7 +28,8 @@
         "laravel/tinker": "^2.5",
         "optimistdigital/nova-menu-builder": "^4.1",
         "predis/predis": "^1.1",
-        "prettus/l5-repository": "^2.7"
+        "prettus/l5-repository": "^2.7",
+        "whitecube/nova-flexible-content": "^0.2.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
