Update docker files.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,7 +27,7 @@ services:
       - ./docker/caddy/caddyssl:/etc/caddycerts
       - ./:/app
     depends_on:
-      - app
+      - node
 
   node:
     build: ./docker/node
