--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=adamanta
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
