--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,6 +27,7 @@
     "nuxt-trailingslash-module": "^1.2.0",
     "vue-lazy-hydration": "^2.0.0-beta.4",
     "vue-recaptcha": "^1.3.0",
+    "vue-slick-carousel": "^1.0.6",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
