--- a/docker/caddy/Caddyfile.example
+++ b/docker/caddy/Caddyfile.example
@@ -1,19 +1,27 @@
-https://adamanta.local {
+https://back.adamanta.com.ua {
     root /app/public
     fastcgi / app:9000 php {
-        connect_timeout 300s
-        read_timeout 300s
-        send_timeout 300s
-        index index.php
+        index index.php index.html index.htm
     }
     rewrite {
         to {path} {path}/ /index.php?{query}
     }
+    gzip
+    browse
+    #log /var/log/caddy/access.log
+    #errors /var/log/caddy/error.log
+
+    tls back.adamanta@gmail.com
+}
+
+https://adamanta.com.ua {
+    proxy / node:1780
+
     timeouts 5m
     gzip
     browse
-    log /var/log/caddy/access.log
-    errors /var/log/caddy/error.log
+    #log /var/log/caddy/access.log
+    #errors /var/log/caddy/error.log
 
-    tls petr.gorchanuk@gmail.com
+    tls adamanta@gmail.com
 }
