--- a/front-end/.env.js.example
+++ b/front-end/.env.js.example
@@ -1,12 +1,13 @@
 'use strict';
 
-let back = 'http://adamanta.local/'
-let base = 'http://adamanta.local/'
+let back = 'https://back.adamanta.com.ua/'
+let base = 'https://adamanta.com.ua/'
 
 export default {
     baseUrl: base,
     backUrl: back,
     assetUrl: base + 'storage/',
+    appBase: 'https://adamanta.com.ua/',
     apiUrl: base + 'api/',
     axiosBaseUrl: 'http://webserver/api/',
 
