--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@inotom/vue-go-top": "^1.3.0",
     "@mdi/font": "^6.1.95",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/moment": "^1.6.1",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
